camera-burst saving images to server instead
